--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/moreButton" android:title="More"></item>
+    <item android:id="@+id/settingsButton" android:title="Settings"></item>
     
 
 </menu>
