--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -5,16 +5,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
      >
-
+
     <TextView
         android:id="@+id/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title" />
+        android:text="Title"
+        android:textColor="#ff0000"
+        android:textSize="15sp" />
+
     <TextView
         android:id="@+id/Date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="10sp"
         android:text="Date" />
     <TextView
         android:id="@+id/Short"
