--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true" >
 
-    <TextView
-        android:id="@+id/detailsTitle"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView"
-        android:textColor="#ff0000"
-        android:textSize="19sp" />
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/detailsPubDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/detailsTitle"
-        android:text="TextViewfggfggf"
-        android:textSize="10sp" />
+        <TextView
+            android:id="@+id/detailsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="TextView"
+            android:textColor="#ff0000"
+            android:textSize="19sp" />
 
-    <TextView
-        android:id="@+id/detailsCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/detailsTitle"
-        android:text="TextViewfggfggf"
-        android:textColor="#00FF00"
-        android:textSize="10sp" />
+        <TextView
+            android:id="@+id/detailsPubDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/detailsTitle"
+            android:text="TextViewfggfggf"
+            android:textSize="10sp" />
 
-    <TextView
-        android:id="@+id/detailsContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/detailsPubDate"
-        android:layout_marginTop="15dp"
-        android:text="TextViewfggfggfTextViewfggfggfTextViewfggfggf" />
+        <TextView
+            android:id="@+id/detailsCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/detailsTitle"
+            android:text="TextViewfggfggf"
+            android:textColor="#00FF00"
+            android:textSize="10sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/detailsContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/detailsPubDate"
+            android:layout_marginTop="15dp"
+            android:text="TextViewfggfggfTextViewfggfggfTextViewfggfggf" />
+    </RelativeLayout>
+
+</ScrollView>
