--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -29,6 +29,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:ems="10" />
     <LinearLayout 
     android:layout_width="match_parent"
