--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:text="TextView"
-            android:textColor="#ff0000"
+            android:textColor="#0e36b9"
             android:textSize="19sp" />
 
         <TextView
