--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
-        android:textColor="#ff0000"
+        android:textColor="#0e36b9"
         android:textSize="15sp" />
 
     <TextView
