--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -11,19 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
-        android:textColor="#0e36b9"
+        android:textColor="@color/title"
         android:textSize="15sp" />
 
     <TextView
         android:id="@+id/Date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/date"
         android:textSize="10sp"
         android:text="Date" />
     <TextView
         android:id="@+id/Short"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:color="@color/content"
         android:layout_weight="0.00"
         android:text="Besedilo" />
 
