--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -3,7 +3,7 @@
     android:id="@+id/scrollView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/black"
+    android:background="@color/bg"
     android:layout_alignParentLeft="true" >
 
     <RelativeLayout
