--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="title">#0e36b9</color>
-    <color name="date">#00ff00</color>
-    <color name="category">#00FF00</color>
+    <color name="title">#6BB0D1</color>
+    <color name="date">#3292bf</color>
+    <color name="category">#3292bf</color>
     <color name="white">#0000ff</color>
-    <color name="content">#fffafa</color>
+    <color name="content">#0000ff</color>
+    
+    <color name="bg">#20556E</color>
 
 </resources>
